--- a/src/app/components/our-team/our-team.component.html
+++ b/src/app/components/our-team/our-team.component.html
@@ -4,12 +4,12 @@
 </div>
 <div class="container">
 <div class="row">
-  <div class="col-sm-6">
-    <h2>“There is always a<span class="highlight"> better</span> way to do it 
-       But we have to <span class="highlight">find</span> it“</h2>
+  <div class="col-sm-5">
+    <h2>“There is always a<span class="highlight"> better</span> way to do it </h2>
+    <h2>But we have to <span class="highlight">find</span> it“</h2>
    <p>- Thomas Alva Edison</p>
   </div>
-  <div class="col-sm-1"></div>
+  <div class="col-sm-2"></div>
   <div class="col-sm-5">
     <h6>Provide Meaningful design solution for products which
       amplifies human ability resulting in harmony between
