--- a/src/app/components/services/back-end-development/back-end-development.component.scss
+++ b/src/app/components/services/back-end-development/back-end-development.component.scss
@@ -17,6 +17,9 @@ p{
     text-align: justify;
     margin-bottom: 30px;
 }
+.btn{
+    padding: 0;
+}
 .searvice-jumbotron{
     h5{
         margin-top: 37px;
