--- a/src/app/components/services/usability-testing/usability-testing.component.html
+++ b/src/app/components/services/usability-testing/usability-testing.component.html
@@ -112,7 +112,7 @@
                   <div class="service-icon">
                       <img src="/assets/images/services/one.png" alt="UX consulting"/>
                   </div>
-                  <h4>User Experience</h4>
+                  <h4>USER EXPERIENCE</h4>
                   <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
                   <a class="btn">Show More</a>
                 </div>
@@ -122,7 +122,7 @@
                   <div class="service-icon">
                     <img src="/assets/images/services/two.png" alt="Interface Design"/>
                   </div>
-                  <h4>Interface Design</h4>
+                  <h4>INTERFACE DESIGN</h4>
                   <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
                   <a class="btn">Show More</a>
               </div>
@@ -132,7 +132,7 @@
                   <div class="service-icon">
                     <img src="/assets/images/services/three.png" alt="Front End Dev" />
                   </div>
-                  <h4>UI Development</h4>
+                  <h4>UI DEVELOPMENT</h4>
                   <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
                     execute it pixel perfect</p>
                   <a class="btn">Show More</a>
