--- a/src/app/components/services/ux-consulting/ux-consulting.component.html
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.html
@@ -188,7 +188,7 @@
                         <div class="service-icon">
                           <img src="/assets/images/services/one.png" alt="UI Development" /> 
                         </div>
-                        <h4>UI Development</h4>
+                        <h4>UI DEVELOPMENT</h4>
                         <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
                           execute it pixel perfect.</p>
                         <a class="btn">Show More</a>
@@ -199,7 +199,7 @@
                         <div class="service-icon">
                           <img src="/assets/images/services/four.png" alt="End-to-End Development"/>
                         </div>
-                        <h4>End-to-End Development</h4>
+                        <h4>END TO END DEVELOPMENT</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
                         <a class="btn">Show More</a>
                       </div>
@@ -209,7 +209,7 @@
                       <div class="service-icon">
                         <img src="/assets/images/services/two.png" alt="Interface Design"/>
                       </div>
-                      <h4>Interface Design</h4>
+                      <h4>INTERFACE DESIGN</h4>
                       <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
                       <a class="btn">Show More</a>
                   </div>
