--- a/src/app/components/services/ux-consulting/ux-consulting.component.scss
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.scss
@@ -18,6 +18,9 @@ p{
     margin-bottom: 30px;
     margin-top: 10px;
 }
+.btn{
+    padding: 0;
+}
 .searvice-jumbotron-inner{
     h5{
         margin-top: 60px;  
