--- a/src/app/components/services/visual-design/visual-design.component.html
+++ b/src/app/components/services/visual-design/visual-design.component.html
@@ -428,7 +428,7 @@
                       <div class="service-icon">
                           <img src="/assets/images/services/one.png" alt="UX consulting"/>
                       </div>
-                      <h4>User Experience</h4>
+                      <h4>USER EXPERIENCE</h4>
                       <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
                       <a class="btn">Show More</a>
                     </div>
@@ -439,7 +439,7 @@
                         <div class="service-icon">
                           <img src="/assets/images/services/three.png" alt="Front End Dev" /> 
                         </div>
-                        <h4>UI Development</h4>
+                        <h4>UI DEVELOPMENT</h4>
                         <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
                           execute it pixel perfect</p>
                         <a class="btn">Show More</a>
@@ -451,7 +451,7 @@
                         <div class="service-icon">
                           <img src="/assets/images/services/four.png" alt="End-to-End Development"/>
                         </div>
-                        <h4>End-to-End Development</h4>
+                        <h4>END TO END DEVELOPMENT</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
                         <a class="btn">Show More</a>
                       </div>
