--- a/src/app/components/services/visual-design/visual-design.component.scss
+++ b/src/app/components/services/visual-design/visual-design.component.scss
@@ -9,6 +9,10 @@
     color: #1ED69F;
 }
 
+.btn{
+    padding: 0;
+}
+
 .searvice-jumbotron{
     background-color: #F7F5FF; 
     margin-top: -15px;
