--- a/src/app/components/our-team/our-team.component.scss
+++ b/src/app/components/our-team/our-team.component.scss
@@ -19,14 +19,23 @@ font-style: 'Roboto';
 .highlight{
     color: #1ED69F;
 }
+h2{
+    font-size: 24px;
+    font-weight: 300;
+    font-family: 'Inter', sans-serif;
+}
 h6{
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 15px;
+    font-weight: 300;
+    font-family: 'Roboto Slab', serif;
     line-height: 37px;
     margin-bottom: 22px;
     text-align: justify;
 }
 p{
+    font-size: 15px;
+    font-weight: 300;
+    font-family: 'Roboto Slab', serif;
     text-align:right;
 }
 .build-next-product-body {
@@ -36,10 +45,11 @@ p{
 .build-next-product-body .btn.enquire {
     cursor: pointer;
     color: #FFF;
+    font-family: 'Inter', sans-serif;
+    font-size: 12px;
+    font-weight: 400;
     border-radius: 5px;
-    font-size: 20px;
     padding: 11px 25px;
-    font-weight: 900;
     margin-left: -23px;
     margin-top: 17px;
 }
