--- a/src/app/components/services/back-end-development/back-end-development.component.html
+++ b/src/app/components/services/back-end-development/back-end-development.component.html
@@ -147,7 +147,7 @@
                   <div class="service-icon">
                     <img src="/assets/images/services/five.png" alt="Usablity Testing"/>
                   </div>
-                  <h4>Usablity Testing</h4>
+                  <h4>USABILITY TESTING</h4>
                   <p>By means of Usability Testing techniques we valuate the product or website’s user experience even before it is built or it hits the market to assess and iterate the design to reduce cost and enhance end user’s experience</p>
                   <a class="btn">Show More</a>
                 </div>
@@ -157,7 +157,7 @@
               <div class="service-icon">
                 <img src="/assets/images/services/two.png" alt="UI Design"/>
               </div>
-              <h4>Interface Design</h4>
+              <h4>INTERFACE DESIGN</h4>
               <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI.</p>
               <a class="btn">Show More</a>
           </div>
@@ -167,7 +167,7 @@
                   <div class="service-icon">
                       <img src="/assets/images/services/one.png" alt="UX consulting"/>
                   </div>
-                  <h4>User Experience</h4>
+                  <h4>USER EXPERIENCE</h4>
                   <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
                   <a class="btn">Show More</a>
                 </div>
