--- a/src/app/components/services/front-end-development/development.component.html
+++ b/src/app/components/services/front-end-development/development.component.html
@@ -176,7 +176,7 @@
                       <div class="service-icon">
                           <img src="/assets/images/services/one.png" alt="UX consulting"/>
                       </div>
-                      <h4>User Experience</h4>
+                      <h4>USER EXPERIENCE</h4>
                       <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
                       <a class="btn">Show More</a>
                     </div>
@@ -186,7 +186,7 @@
                       <div class="service-icon">
                         <img src="/assets/images/services/two.png" alt="Interface Design"/>
                       </div>
-                      <h4>Interface Design</h4>
+                      <h4>INTERFACE DESIGN</h4>
                       <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
                       <a class="btn">Show More</a>
                   </div>
@@ -196,7 +196,7 @@
                         <div class="service-icon">
                           <img src="/assets/images/services/four.png" alt="End-to-End Development"/>
                         </div>
-                        <h4>End-to-End Development</h4>
+                        <h4>END TO END DEVELOPMENT</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
                         <a class="btn">Show More</a>
                       </div>
