--- a/src/app/components/services/usability-testing/usability-testing.component.scss
+++ b/src/app/components/services/usability-testing/usability-testing.component.scss
@@ -17,6 +17,9 @@ p{
     text-align: justify;
     margin-bottom: 30px;
 }
+.btn{
+    padding: 0;
+}
 .searvice-jumbotron{
      background-color: rgb(255, 255, 255); 
      margin-top: -15px;
